[package]
name = "actix_web_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.28", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
log = "0.4.20"
env_logger = "0.10.0"
