[package]
name = "actix_web_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.28", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
log = "0.4.20"
env_logger = "0.10.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
rusqlite = { version = "0.29.0", features = ["chrono", "uuid"] }
derive-new = "0.5.9"
